--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>2025 沖繩 🌺</title>
+    <meta property="og:title" content="2025 沖繩 🌺" />
+    <meta property="og:description" content="12/25 - 12/29 五天四夜行程表、必買清單與記帳分帳全攻略！" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wanli908.github.io/okinawa-202512/" />
+    <meta property="og:image" content="https://cdn.zekkei-japan.jp/datas/images/2024/04/30/c03f51ed4ebc5e578df0cbe7501f1a9ee742df4e.jpg" />
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
